--- a/index.html
+++ b/index.html
@@ -112,6 +112,6 @@
 
         </footer>
         <script src="jquery.js"></script>
-        <script src="bootsTrap/js/bootstrap.min.js"> </script>
+        <script src="bootstrap/js/bootstrap.min.js"> </script>
     </body>
   </html>    
