mudei o hash dos doguinho do formulario

--- a/adocao.html
+++ b/adocao.html
@@ -64,16 +64,16 @@
                             </div>
                         </div>
                             <div class="doguineos">
-                                <div class="bulldog-macho-carente-pequeno"><h1>Noa</h1><p>Macho - carente - pequeno</p><a href="ficha2.html">conheça</a></div>
-                                <div class="shaggy-macho-carente-medio"><h1>Bailey</h1><p>Macho - carente - medio</p><<a href="ficha2.html">conheça</a></div>
-                                <div class="staying-macho-carente-pequeno"><h1>Nick</h1><p>Macho - carente - pequeno</p><a href="ficha2.html">conheça</a></div>
-                                <div class="cavalier-femea-brincalhona-media"><h1>Lufa-lufa</h1><p>fêmea - brincalhona - media</p><a href="ficha.html">conheça</a></div>
-                                <div class="femea-independente-pequena"><h1>Luna</h1><p>fêmea - independente - pequena</p><a href="ficha.html">conheça</a></div>
-                                <div class="curly-femea-independente-pequena"><h1>Nora</h1><p>femea - independente - pequena</p><a href="ficha.html">conheça</a></div>
-                                <div class="pug"><h1>João</h1><p>Macho - independente - pequeno</p><a href="ficha3.html">conheça</a>
+                                <div class="bulldog-macho-carente-pequeno"><h1>Noa</h1><p>Macho - carente - pequeno</p><a href="ficha.html#2">conheça</a></div>
+                                <div class="shaggy-macho-carente-medio"><h1>Bailey</h1><p>Macho - carente - medio</p><<a href="ficha.html#3">conheça</a></div>
+                                <div class="staying-macho-carente-pequeno"><h1>Nick</h1><p>Macho - carente - pequeno</p><a href="ficha.html#1">conheça</a></div>
+                                <div class="cavalier-femea-brincalhona-media"><h1>Lufa-lufa</h1><p>fêmea - brincalhona - media</p><a href="ficha.html#5">conheça</a></div>
+                                <div class="femea-independente-pequena"><h1>Luna</h1><p>fêmea - independente - pequena</p><a href="ficha.html#6">conheça</a></div>
+                                <div class="curly-femea-independente-pequena"><h1>Nora</h1><p>femea - independente - pequena</p><a href="ficha.html#4">conheça</a></div>
+                                <div class="pug"><h1>João</h1><p>Macho - independente - pequeno</p><a href="ficha.html#8">conheça</a>
                                 </div>
-                                <div class="bulldog"><h1>Pietro</h1><p>Macho - independente - pequeno</p><a href="ficha3.html">conheça</a></div>
-                                <div class="happy"><h1>Juliano</h1><p>Macho - Brincalhão - pequeno</p><a href="ficha3.html">conheça</a></div>
+                                <div class="bulldog"><h1>Pietro</h1><p>Macho - independente - pequeno</p><a href="ficha.html#9">conheça</a></div>
+                                <div class="happy"><h1>Juliano</h1><p>Macho - Brincalhão - pequeno</p><a href="ficha.html#7">conheça</a></div>
                             </div>
                         </main>
                        <footer class="rodape-adocao">
