--- a/ficha.html
+++ b/ficha.html
@@ -25,13 +25,13 @@
             <main>
                 <div class="cachorrineo"></div>
                 <div class="formulario">
-                    <p class="sexo">Sexo: <span class="femea">Fêmea</span></p>
-                    <p class="temperamento">Temperamento: <span class="carente">Carente</span></p>
-                    <p class="idade"> Idade: <span class="anos"> 1 ano</span></p>
-                    <p class="porte">Porte: <span class="pequena"> Pequena</span></p>  
+                    <p class="sexo">Sexo: <span class="femea"></span></p>
+                    <p class="temperamento">Temperamento: <span class="carente"></span></p>
+                    <p class="idade"> Idade: <span class="anos"> </span></p>
+                    <p class="porte">Porte: <span class="pequena"></span></p>  
                 </div>
                 <div class="sobre-ela">
-                    <p>Eu sou essa doguinha alegre e independente. Mas, olha... vou te contar que eu nem sempre estive tão em forma assim. Antes de ser resgatada pela Good Dogtor, eu vivia em um clube cheio de outros doguinhos e de animais silvestres. Mas agora eu posso ficar aqui segura com meus amigos brincalhões, recebendo comida gostosa e água fresquinha. Para melhorar os meus dias só falta uma coisa: uma família que vai se apaixonar por mim e nunca mais me abandonar. Vem me fazer uma visita, quem sabe a sua família não acabe se tornando a minha também?</p>
+                    <p id="bio"></p>
                 </div>
                <div class="button"><button type="button" class="btn btn-primary btn-lg btn-block">Gostou de mim? então clique <a id="me-adote" href="contato.html">aqui</a> e me leva para sua casa?</button></div>
             </main>
@@ -49,5 +49,9 @@
                                     Email: gooddogtor@gmail.com
                                   </address></div>
                 </footer>
-            </body>  
+
+            </body> 
+                <script src="jquery.js"></script>
+                <script src="js/ficha.js"></script> 
+                
             </html>
