mudei o texto sobre

--- a/saiba.html
+++ b/saiba.html
@@ -27,9 +27,9 @@
                     <div class="text">
                         <div class="dog"></div>
                         <h1>Sobre nós</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est"</p>
+                        <p>Adotar um animal de estimação é que muitas famílias desejam os benefícios de ter um bichinho em casa são incontáveis. Existem milhares de doguinhos à espera de um lar.  Os bichinhos são castrados, vacinados e vermífugados e ficam prontos para que as famílias possam leva-los para casa.  </p>
                         <h2>Como nosso abrigo se mantém?</h2>
-                        <p class="como-mantem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est"</p>
+                        <p class="como-mantem"> Nós arrecadamos fundos através de doações feitas por pessoas do Brasil inteiro, e além disso, é cobrada uma taxa para que possamos deixar a saúde e beleza dos doguinhos em dia, afinal eles merecem tudo do bom e do melhor. Não recebemos salários nem comissões cuidando dos doguinhos, recebemos apenas amor vindo deles :) então a taxa existe para que consigamos manter o abrigo.</p>
                         <p class="contate">Entre em <a id="contato" href="contato.html">contato</a> conosco</p>
                         </div>
                 </main> 
