alterei o texto sobre do index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <div id="sobre" class="caixa">
                   <div class="escrito"><h2>Sobre</h2></div>
                 </div>
-               <div class="sobre-nos"><p>Se você deseja ter um amiguinho fiel, companheiro e leal, não precisa pagar por um, pois um amigo não se compra! Amigo a gente ama, cuida e respeita. Amigo não tem raça, não tem pedigree. Então, procure um cão ou gato para adotar.Para manter-se em funcionamento, a Catland conta somente com doações da comunidade e parcerias com empresas que visam colaborar com a causa. Entretanto, os custos mensais dificilmente são cobertos por esses valores e as despesas com aluguel, alimentação, limpeza e cuidados veterinários, entre outros, aumentam a cada dia.</p></div>             
+               <div class="sobre-nos"><p>Se você deseja ter um amiguinho fiel, companheiro e leal, não precisa pagar por um, pois um amigo não se compra! Amigo a gente ama, cuida e respeita. Amigo não tem raça, não tem pedigree. Então, procure um cão ou gato para adotar.Para manter-se em funcionamento, a Good Dogtor conta somente com doações da comunidade. Entretanto, os custos mensais dificilmente são cobertos por esses valores e as despesas com aluguel, alimentação, limpeza e cuidados veterinários, entre outros, aumentam a cada dia. Por esse movito, ao adotar um doguinho, você pagará por uma taxa para cobrir os custos que as doações não cobrem, mas não se preocupe, é um valor simbólico perto da riqueza que é ter o amor de um doguinho na sua casa!</p></div>             
             </div>   
         </main>
         <footer class="rodape">
